Revert "common sorts RC1 : backend"
This reverts commit 9165e93c1965aaf1ffbaca205c9863279d1b2605.

--- a/lib/translations/lib/ca.json
+++ b/lib/translations/lib/ca.json
@@ -111,6 +111,9 @@
   "comments.send": "Enviar",
   "comments.sign-in-required": "Has d'estar registrat per poder afegir un argument",
   "comments.sign-in-required-to-vote-comments": "Has d'entrar a votar arguments",
+  "comments.sorts.newest-first": "El nou primer",
+  "comments.sorts.oldest-first": "El més antic primer",
+  "comments.sorts.score": "Score",
   "comments.your-argument": "El teu argument",
   "comments.your.arguments": "Els seus arguments",
   "common.app-name": "DemocracyOS",
@@ -124,11 +127,6 @@
   "common.ok": "OK",
   "common.or": "o",
   "common.read-more": "Llegir text complet",
-  "common.sorts.closing-soon": "Closing soon",
-  "common.sorts.newest-first": "Newest first",
-  "common.sorts.oldest-first": "Oldest first",
-  "common.sorts.recently-updated": "Recently updated",
-  "common.sorts.score": "Score",
   "democracyos.markdown.flavored": "Markdown DemocracyOS amb gust",
   "forgot.error.email-not-valid": "Vostè ha de validar la seva adreça de correu electrònic per poder restablir la contrasenya de compte",
   "forgot.explanation": "T'enviarem un enllaç per regenerar la teva contrasenya",
@@ -271,6 +269,10 @@
   "signup.with-email": "Registrar-se amb el correu electrònic",
   "signup.your-firstname": "El teu nom",
   "signup.your-lastname": "El teu cognom",
+  "sorts.closing-soon": "Closing soon",
+  "sorts.newest-first": "Newest first",
+  "sorts.oldest-first": "Oldest first",
+  "sorts.recently-updated": "Recently updated",
   "validators.checked": "Camp obligatori comprovat",
   "validators.input.not-exists": "No existeix {name} elemental",
   "validators.invalid": "invàlid",
