--- a/lib/translations/lib/el.json
+++ b/lib/translations/lib/el.json
@@ -117,6 +117,9 @@
   "comments.send": "Αποστολή",
   "comments.sign-in-required": "Θα πρέπει να συνδεθείτε για να υποστηρίξει εδώ",
   "comments.sign-in-required-to-vote-comments": "Θα πρέπει να είστε συνδεδεμένοι στο πάνω / επιχειρήματα downvote",
+  "comments.sorts.newest-first": "Τα νεώτερα πρώτα",
+  "comments.sorts.oldest-first": "Τα παλαιότερα πρώτα",
+  "comments.sorts.score": "Συνάφεια",
   "comments.your-argument": "Το επιχείρημά σας",
   "comments.your.arguments": "Τα επιχειρήματά σας",
   "common.app-name": "DemocracyOS",
@@ -130,11 +133,6 @@
   "common.ok": "ΕΝΤΆΞΕΙ",
   "common.or": "ή",
   "common.read-more": "Διαβάστε περισσότερα",
-  "common.sorts.closing-soon": "Κλείνουν Σύντομα",
-  "common.sorts.newest-first": "Τα νεώτερα πρώτα",
-  "common.sorts.oldest-first": "Τα παλαιότερα πρώτα",
-  "common.sorts.recently-updated": "Πρόσφατα ενημερωμένα",
-  "common.sorts.score": "Συνάφεια",
   "democracyos.markdown.flavored": "DemocracyOS αρωματισμένο markdown",
   "forgot.error.email-not-valid": "Πρέπει να επιβεβαιώσετε τη διεύθυνση ηλεκτρονικού ταχυδρομείου σας για να μπορέσετε να επαναφέρετε τον κωδικό πρόσβασης του λογαριασμού σας",
   "forgot.explanation": "Θα σας στείλουμε ένα email με ένα σύνδεσμο για να επαναφέρετε τον κωδικό πρόσβασής σας",
@@ -280,6 +278,10 @@
   "signup.with-email": "Εγγραφή με e-mail",
   "signup.your-firstname": "Το όνομά σας",
   "signup.your-lastname": "Το επίθετο σου",
+  "sorts.closing-soon": "Κλείνουν Σύντομα",
+  "sorts.newest-first": "Τα νεώτερα πρώτα",
+  "sorts.oldest-first": "Τα παλαιότερα πρώτα",
+  "sorts.recently-updated": "Πρόσφατα ενημερωμένα",
   "validators.checked": "Απαιτούμενο ελέγχονται τομέα",
   "validators.input.not-exists": "{name} στοιχείο δεν υπάρχει",
   "validators.invalid": "Άκυρος",
