--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -4,7 +4,6 @@
   "404.not-exists": "This page does not exist",
   "add-user-input.placeholder": "Add a person",
   "admin-comments.dowload-as-csv": "Download all as .csv",
-  "admin-forums-form.message.onsuccess": "Consultation sauvegardée avec succès",
   "admin-general.form.title": "General properties",
   "admin-general.message.onsuccess": "Properties successfully saved",
   "admin-permissions.revoke": "Revoke",
@@ -115,16 +114,16 @@
   "admin-topics-form.label.tags": "Tags",
   "admin-topics-form.label.topicId": "Official Id",
   "admin-topics-form.label.votable": "Votable",
-  "admin-topics-form.message.cant-edit-action": "There are votes already casted, voting method can't be modified after that.",
   "admin-topics-form.message.cant-edit-action.options": "There are votes already casted, options can't be modified after that.",
+  "admin-topics-form.message.cant-edit-action": "There are votes already casted, voting method can't be modified after that.",
   "admin-topics-form.message.onsuccess": "Topic successfuly saved",
   "admin-topics-form.message.private-status": "This topic is a draft",
   "admin-topics-form.message.public-status": "This topic is published to public",
   "admin-topics-form.message.validation.mediaTitle-required": "Media title required",
-  "admin-topics-form.message.validation.pollOptions-required": "Must add options to the poll",
   "admin-topics-form.message.validation.source-invalid": "Source must be a valid URL",
   "admin-topics-form.message.validation.source-required": "Source required",
   "admin-topics-form.message.validation.topicId-required": "Official Id required",
+  "admin-topics-form.message.validation.pollOptions-required": "Must add options to the poll",
   "admin-topics-form.placeholder.author": "John Doe",
   "admin-topics-form.placeholder.authorUrl": "http://en.wikipedia.org/wiki/John_Doe",
   "admin-topics-form.placeholder.cover": "http://images-repository.com/your_image.jpg",
@@ -194,12 +193,15 @@
   "comments.send": "Send",
   "comments.sign-in-required": "You must be signed in to argue here",
   "comments.sign-in-required-to-vote-comments": "You must be signed in to up/downvote arguments",
+  "comments.sorts.newest-first": "Newest first",
+  "comments.sorts.oldest-first": "Oldest first",
+  "comments.sorts.score": "Relevance",
   "comments.votes": "votes",
   "comments.your-argument": "Your argument",
   "comments.your.arguments": "Your arguments",
-  "common.accept": "Got it!",
   "common.app-name": "DemocracyOS",
   "common.auth-error": "The request is unauthorized.",
+  "common.accept": "Got it!",
   "common.back": "Back",
   "common.cancel": "Cancel",
   "common.close": "Closes",
@@ -212,13 +214,6 @@
   "common.or": "or",
   "common.pass-match-error": "Don't match.",
   "common.read-more": "Read more",
-  "common.sorts.by-title-asc": "title a -> z",
-  "common.sorts.closing-soon": "closing soon",
-  "common.sorts.newest-first": "newest first",
-  "common.sorts.oldest-first": "oldest first",
-  "common.sorts.random": "shuffle",
-  "common.sorts.recently-updated": "recently updated",
-  "common.sorts.score": "Relevance",
   "cookie.allow": "Allow cookies",
   "cookie.decline": "Decline",
   "cookie.message": "This website uses cookies to ensure you get the best experience on our website.",
@@ -252,8 +247,8 @@
   "header.signup": "Signup",
   "help.faq.title": "FAQ",
   "help.glossary.title": "Glossary",
-  "help.legal.title": "Legal terms",
   "help.markdown.title": "Formatting help",
+  "help.legal.title": "Legal terms",
   "help.pp.title": "Privacy Policy",
   "help.title": "Help",
   "help.tos.title": "Terms of Service",
@@ -338,11 +333,10 @@
   "settings-forums.delete.confirmation.title": "Are you ABSOLUTELY sure?",
   "settings-notifications.no": "No",
   "settings-notifications.yes": "Yes",
-  "settings.add": "Add",
   "settings.badge": "Sticker",
   "settings.badge.not-empty": "Sticker name cannot be empty",
-  "settings.badge.placeholder": "The name of your sticker",
   "settings.badge.success": "The sticker was successfuly updated",
+  "settings.badge.placeholder": "The name of your sticker",
   "settings.change-at-gravatar": "Change your profile picture at gravatar.com",
   "settings.change-password": "Change password",
   "settings.confirm-password": "Confirm new password",
@@ -379,9 +373,12 @@
   "settings.profile": "Profile",
   "settings.profile-picture": "Profile Picture",
   "settings.save": "Save",
+  "settings.add": "Add",
   "settings.sidebar.forums": "Communities",
   "settings.successfuly-updated": "Your profile was successfuly updated",
   "settings.title": "Settings",
+  "system.user-badges": "Stickers",
+  "system.user-badges.title": "User stickers",
   "sidebar.closed": "Closed",
   "sidebar.hide-voted": "Hide voted by me",
   "sidebar.open": "Open",
@@ -409,9 +406,9 @@
   "signup.check-email": "Please check your email (remember to check your spam folder too) and click on the link supplied on the email.",
   "signup.complete": "Signup complete",
   "signup.email": "Email",
-  "signup.email-exist": "This email is already registered",
   "signup.email-sent": "Email sent",
   "signup.email-validated": "Your email has been validated and now you are logged in",
+  "signup.email-exist": "This email is already registered",
   "signup.firstname": "Firstname",
   "signup.go-to": "Go to",
   "signup.lastname": "Lastname",
@@ -430,48 +427,18 @@
   "signup.with-email": "Signup with email",
   "signup.your-firstname": "Your firstname",
   "signup.your-lastname": "Your lastname",
+  "system.title": "Global settings",
   "system.sidebar.forums": "Forums",
   "system.sidebar.users": "Users",
-  "system.title": "Global settings",
-  "system.user-badges": "Stickers",
-  "system.user-badges.title": "User stickers",
-  "system.users.message.onsuccess": "User saved successfully",
-  "system.users.title.create": "Add user",
-  "system.users.title.edit": "Edit user",
+  "sorts.by-title-asc": "By title A -> Z",
+  "sorts.closing-soon": "Closing soon",
+  "sorts.newest-first": "Newest first",
+  "sorts.oldest-first": "Oldest first",
+  "sorts.recently-updated": "Recently updated",
   "topics.actions.cause.do": "Add my Support",
   "topics.actions.cause.done": "You Support this",
   "topics.actions.poll.do": "Vote",
-  "user.extra.age.1": "less than 15",
-  "user.extra.age.10": "55-59",
-  "user.extra.age.11": "60-64",
-  "user.extra.age.12": "65-69",
-  "user.extra.age.13": "70-74",
-  "user.extra.age.14": "75 or more",
-  "user.extra.age.2": "15-19",
-  "user.extra.age.3": "20-24",
-  "user.extra.age.4": "25-29",
-  "user.extra.age.5": "30-34",
-  "user.extra.age.6": "35-39",
-  "user.extra.age.7": "40-44",
-  "user.extra.age.8": "45-49",
-  "user.extra.age.9": "50-54",
-  "user.extra.age.label": "Age",
-  "user.extra.age.short.1": "less than 18",
-  "user.extra.age.short.2": "18-29",
-  "user.extra.age.short.3": "30-49",
-  "user.extra.age.short.4": "50-65",
-  "user.extra.age.short.5": "65 or more",
-  "user.extra.job.1": "Student",
-  "user.extra.job.2": "Company",
-  "user.extra.job.3": "Public agent",
-  "user.extra.job.4": "Professional",
-  "user.extra.job.5": "Other",
-  "user.extra.job.label": "Activity",
-  "user.extra.org.label": "Organization",
-  "user.extra.postal.label": "Postal code",
-  "user.extra.postal.validator": "Invalid postal code (FR)",
   "validators.checked": "Required checked field",
-  "validators.color.hex": "Invalid Hex value (ex: #337ab7)",
   "validators.input.not-exists": "{name} element does not exists",
   "validators.invalid": "Invalid",
   "validators.invalid.author": "Invalid author",
@@ -488,5 +455,41 @@
   "validators.min-length.singular": "It must be at least 1 character",
   "validators.not.match": "No match",
   "validators.password.not.match": "Passwords do not match",
-  "validators.required": "Required"
+  "validators.required": "Required",
+  "validators.color.hex": "Invalid Hex value (ex: #337ab7)",
+  "system.users.message.onsuccess": "User saved successfully",
+  "system.users.title.edit": "Edit user",
+  "system.users.title.create": "Add user",
+  "user.extra.age.label": "Age",
+  "user.extra.age.1": "less than 15",
+  "user.extra.age.2": "15-19",
+  "user.extra.age.3": "20-24",
+  "user.extra.age.4": "25-29",
+  "user.extra.age.5": "30-34",
+  "user.extra.age.6": "35-39",
+  "user.extra.age.7": "40-44",
+  "user.extra.age.8": "45-49",
+  "user.extra.age.9": "50-54",
+  "user.extra.age.10": "55-59",
+  "user.extra.age.11": "60-64",
+  "user.extra.age.12": "65-69",
+  "user.extra.age.13": "70-74",
+  "user.extra.age.14": "75 or more",
+  "user.extra.age.short.1": "less than 18",
+  "user.extra.age.short.2": "18-29",
+  "user.extra.age.short.3": "30-49",
+  "user.extra.age.short.4": "50-65",
+  "user.extra.age.short.5": "65 or more",
+  "user.extra.job.label": "Activity",
+  "user.extra.job.1": "Student",
+  "user.extra.job.2": "Company",
+  "user.extra.job.3": "Public agent",
+  "user.extra.job.4": "Professional",
+  "user.extra.job.5": "Artisan",
+  "user.extra.job.5": "Retired",
+  "user.extra.job.5": "Unemployed",
+  "user.extra.job.5": "Other",
+  "user.extra.org.label": "Organization",
+  "user.extra.postal.label": "Postal code",
+  "user.extra.postal.validator": "Invalid postal code (FR)"
 }
