--- a/lib/translations/lib/es.json
+++ b/lib/translations/lib/es.json
@@ -113,16 +113,16 @@
   "admin-topics-form.label.tags": "Etiquetas",
   "admin-topics-form.label.topicId": "Identificación oficial",
   "admin-topics-form.label.votable": "Votable",
-  "admin-topics-form.message.cant-edit-action": "El método de votación no puede ser editado luego de realizado el primer voto.",
   "admin-topics-form.message.cant-edit-action.options": "Las opciones no pueden ser editadas luego de realizado el primer voto.",
+  "admin-topics-form.message.cant-edit-action": "El método de votación no puede ser editado luego de realizado el primer voto.",
   "admin-topics-form.message.onsuccess": "Tema guardado exitosamente",
   "admin-topics-form.message.private-status": "Este tema es un borrador",
   "admin-topics-form.message.public-status": "Este tema está abierto al público",
   "admin-topics-form.message.validation.mediaTitle-required": "Título mediático requerido",
-  "admin-topics-form.message.validation.pollOptions-required": "Debes agregar opciones a la encuesta",
   "admin-topics-form.message.validation.source-invalid": "Fuente debe ser una dirección de internet (URL) válida",
   "admin-topics-form.message.validation.source-required": "Fuente requerida",
   "admin-topics-form.message.validation.topicId-required": "Identificación oficial requerida",
+  "admin-topics-form.message.validation.pollOptions-required": "Debes agregar opciones a la encuesta",
   "admin-topics-form.placeholder.author": "John Doe",
   "admin-topics-form.placeholder.authorUrl": "http://en.wikipedia.org/wiki/John_Doe",
   "admin-topics-form.placeholder.cover": "http://repositorio-de-imagenes.com/tu_imagen.jpg",
@@ -192,6 +192,9 @@
   "comments.send": "Enviar",
   "comments.sign-in-required": "Debés estar registrado para poder argumentar aquí",
   "comments.sign-in-required-to-vote-comments": "Debés estar registrado para poder calificar argumentos",
+  "comments.sorts.newest-first": "Más recientes",
+  "comments.sorts.oldest-first": "Más antiguos",
+  "comments.sorts.score": "Relevancia",
   "comments.votes": "votos",
   "comments.your-argument": "Tu argumento",
   "comments.your.arguments": "Tus argumentos",
@@ -209,12 +212,6 @@
   "common.or": "o",
   "common.pass-match-error": "No coinciden.",
   "common.read-more": "Leer más",
-  "common.sorts.by-title-asc": "Por título A -> Z",
-  "common.sorts.closing-soon": "Próximos a cerrar",
-  "common.sorts.newest-first": "Más recientes",
-  "common.sorts.oldest-first": "Más antiguos",
-  "common.sorts.recently-updated": "Con actividad reciente",
-  "common.sorts.score": "Relevancia",
   "democracyos.markdown.flavored": "Formato de texto",
   "forgot.error.email-not-valid": "Tienes que validar tu dirección de correo electrónico antes de poder reestablecer tu contraseña",
   "forgot.explanation": "Te enviaremos un correo electrónico con un enlace para reestablecer tu contraseña",
@@ -372,6 +369,7 @@
   "settings.sidebar.forums": "Comunidades",
   "settings.successfuly-updated": "Tu perfil se actualizó exitosamente",
   "settings.title": "Ajustes",
+  "system.user-badges": "Etiquetas de usuarios",
   "sidebar.closed": "Cerrados",
   "sidebar.hide-voted": "Ocultar votados por mí",
   "sidebar.open": "Abiertos",
@@ -417,7 +415,11 @@
   "signup.with-email": "Registro con correo electrónico",
   "signup.your-firstname": "Tu nombre",
   "signup.your-lastname": "Tu apellido",
-  "system.user-badges": "Etiquetas de usuarios",
+  "sorts.by-title-asc": "Por título A -> Z",
+  "sorts.closing-soon": "Próximos a cerrar",
+  "sorts.newest-first": "Más recientes",
+  "sorts.oldest-first": "Más antiguos",
+  "sorts.recently-updated": "Con actividad reciente",
   "topics.actions.cause.do": "Apoyar",
   "topics.actions.cause.done": "Apoyas esto",
   "topics.actions.poll.do": "Votar",
