--- a/lib/translations/lib/fr.json
+++ b/lib/translations/lib/fr.json
@@ -4,7 +4,6 @@
   "404.not-exists": "Cette page n'existe pas",
   "add-user-input.placeholder": "Ajouter une personne",
   "admin-comments.dowload-as-csv": "Télécharger tous les commentaires au format .csv",
-  "admin-forums-form.message.onsuccess": "Consultation sauvegardée avec succès",
   "admin-general.form.title": "Paramêtres généraux",
   "admin-general.message.onsuccess": "Informations sauvegardées avec succès",
   "admin-permissions.revoke": "Révoquer",
@@ -190,6 +189,9 @@
   "comments.send": "Envoyer",
   "comments.sign-in-required": "Vous devez être enregistré pour débattre sur ce site",
   "comments.sign-in-required-to-vote-comments": "ous devez être connecté pour noter les commentaires",
+  "comments.sorts.newest-first": "les plus récents d'abord",
+  "comments.sorts.oldest-first": "les plus anciens d'abord",
+  "comments.sorts.score": "score",
   "comments.votes": "votes",
   "comments.your-argument": "Votre commentaire",
   "comments.your.arguments": "Vos commentaires",
@@ -208,13 +210,6 @@
   "common.or": "ou",
   "common.pass-match-error": "Ne correspondent pas.",
   "common.read-more": "Lire la suite",
-  "common.sorts.by-title-asc": "titre de A -> Z",
-  "common.sorts.closing-soon": "clôture proche",
-  "common.sorts.newest-first": "plus récents d'abord",
-  "common.sorts.oldest-first": "plus anciens d'abord",
-  "common.sorts.random": "aléatoire",
-  "common.sorts.recently-updated": "mis à jour récemment",
-  "common.sorts.score": "score",
   "cookie.allow": "Autoriser les cookies",
   "cookie.decline": "Refuser",
   "cookie.message": "Ce site utilise des cookies pour l'authentification et une expérience de navigation optimale.",
@@ -236,10 +231,10 @@
   "forum.form.title.placeholder": "Le nom de votre consultation",
   "forum.form.url.label": "Chemin",
   "forum.form.url.unavailable": "L'URL n'est pas disponible",
-  "forum.list.search.placeholder": "Rechercher une consultation ...",
   "forum.status.creating": "Création de votre consultation...",
   "forum.status.destroying": "Suppression...",
   "forum.status.error": "Une erreur s'est produite, merci de recommencer plus tard.",
+  "forum.list.search.placeholder": "Rechercher une consultation ...",
   "header.admin": "Gérer",
   "header.forums": "Mes consultations",
   "header.insecure-warning": "Avertissement: Vous utilisez une version non sécurisée de DemocracyOS. Consultez la documentation pour plus de détails sur la mise en place du SSL.",
@@ -249,8 +244,8 @@
   "header.signup": "S'inscrire",
   "help.faq.title": "Aide / FAQ",
   "help.glossary.title": "Glossaire",
-  "help.legal.title": "Mentions légales",
   "help.markdown.title": "Mise en forme des textes",
+  "help.legal.title": "Mentions légales",
   "help.pp.title": "Confidentialité",
   "help.title": "Assistance",
   "help.tos.title": "Conditions d'utilisation",
@@ -335,11 +330,10 @@
   "settings-forums.delete.confirmation.title": "Etes-vous VRAIMENT sûr ?",
   "settings-notifications.no": "Non",
   "settings-notifications.yes": "Oui",
-  "settings.add": "Ajouter",
   "settings.badge": "Badge",
   "settings.badge.not-empty": "Le champ badge ne peut pas être vide",
-  "settings.badge.placeholder": "Le nom de votre badge",
   "settings.badge.success": "Le badge a été affecté correctement",
+  "settings.badge.placeholder": "Le nom de votre badge",
   "settings.change-at-gravatar": "Changez votre photo de profil sur gravatar.com",
   "settings.change-password": "Changer le mot de passe",
   "settings.confirm-password": "Confirmer le nouveau mot de passe",
@@ -377,9 +371,12 @@
   "settings.profile": "Profil",
   "settings.profile-picture": "Photo de profil",
   "settings.save": "Sauvegarder",
+  "settings.add": "Ajouter",
   "settings.sidebar.forums": "Consultation",
   "settings.successfuly-updated": "Votre profil a été actualisé avec succès",
   "settings.title": "Paramètres",
+  "system.user-badges": "Badges",
+  "system.user-badges.title": "Badges",
   "sidebar.closed": "Clos",
   "sidebar.hide-voted": "Cacher mes votes",
   "sidebar.open": "En cours",
@@ -407,9 +404,9 @@
   "signup.check-email": "Merci d'ouvrir l'email que nous vous avons envoyé (n'oubliez-pas de regarder aussi dans les emails indésirables) et de cliquer sur le lien fourni.",
   "signup.complete": "Inscription terminée",
   "signup.email": "Email",
-  "signup.email-exist": "Cette adresse email est déjà utlisée",
   "signup.email-sent": "Email envoyé",
   "signup.email-validated": "Votre adresse email a été validée et vous êtes maintenant connecté",
+  "signup.email-exist": "Cette adresse email est déjà utlisée",
   "signup.firstname": "Prénom",
   "signup.go-to": "Aller sur",
   "signup.lastname": "Nom",
@@ -428,51 +425,18 @@
   "signup.with-email": "Inscription via email",
   "signup.your-firstname": "Votre prénom",
   "signup.your-lastname": "Votre nom",
+  "sorts.by-title-asc": "Par titre de A -> Z",
+  "sorts.closing-soon": "Clôture proche",
+  "sorts.newest-first": "Plus récents d'abord",
+  "sorts.oldest-first": "Plus anciens d'abord",
+  "sorts.recently-updated": "Mis à jour récemment",
+  "system.title": "Paramêtres globaux",
   "system.sidebar.forums": "Consultations",
   "system.sidebar.users": "Utilisateurs",
-  "system.title": "Paramêtres globaux",
-  "system.user-badges": "Badges",
-  "system.user-badges.title": "Badges",
-  "system.users.message.onsuccess": "Utilisateur sauvegardé avec succès",
-  "system.users.title.create": "Créer un utilisateur",
-  "system.users.title.edit": "Modifier un utilisateur",
   "topics.actions.cause.do": "Soutenir",
   "topics.actions.cause.done": "Vous soutenez",
   "topics.actions.poll.do": "Voter",
-  "user.extra.age.1": "moins de 15",
-  "user.extra.age.10": "55-59",
-  "user.extra.age.11": "60-64",
-  "user.extra.age.12": "65-69",
-  "user.extra.age.13": "70-74",
-  "user.extra.age.14": "75 ou plus",
-  "user.extra.age.2": "15-19",
-  "user.extra.age.3": "20-24",
-  "user.extra.age.4": "25-29",
-  "user.extra.age.5": "30-34",
-  "user.extra.age.6": "35-39",
-  "user.extra.age.7": "40-44",
-  "user.extra.age.8": "45-49",
-  "user.extra.age.9": "50-54",
-  "user.extra.age.label": "Age",
-  "user.extra.age.short.1": "moins de 18",
-  "user.extra.age.short.2": "18-29",
-  "user.extra.age.short.3": "30-49",
-  "user.extra.age.short.4": "50-65",
-  "user.extra.age.short.5": "65 ou plus",
-  "user.extra.job.1": "Étudiant-e",
-  "user.extra.job.2": "Salarié-e du secteur privé",
-  "user.extra.job.3": "Fonctionnaire ou contractuel-le du secteur public",
-  "user.extra.job.4": "Profession libérale",
-  "user.extra.job.5": "Artisan ou entrepreneur",
-  "user.extra.job.6": "Retraité-e",
-  "user.extra.job.7": "Sans activité",
-  "user.extra.job.8": "Autres",
-  "user.extra.job.label": "Activité",
-  "user.extra.org.label": "Organisation",
-  "user.extra.postal.label": "Code postal",
-  "user.extra.postal.validator": "Code postal invalide",
   "validators.checked": "Le champ coché est obligatoire",
-  "validators.color.hex": "Format hexadecimal invalide (ex: #337ab7)",
   "validators.input.not-exists": "L'élément {name} n'existe pas",
   "validators.invalid": "Invalide",
   "validators.invalid.author": "Auteur invalide",
@@ -487,5 +451,41 @@
   "validators.min-length.singular": "1 caractère au minimum",
   "validators.not.match": "Aucun résultat",
   "validators.password.not.match": "Les mots de passe ne correspondent pas",
-  "validators.required": "Requis"
+  "validators.required": "Requis",
+  "validators.color.hex": "Format hexadecimal invalide (ex: #337ab7)",
+  "system.users.message.onsuccess": "Utilisateur sauvegardé avec succès",
+  "system.users.title.edit": "Modifier un utilisateur",
+  "system.users.title.create": "Créer un utilisateur",
+  "user.extra.age.label": "Age",
+  "user.extra.age.1": "moins de 15",
+  "user.extra.age.2": "15-19",
+  "user.extra.age.3": "20-24",
+  "user.extra.age.4": "25-29",
+  "user.extra.age.5": "30-34",
+  "user.extra.age.6": "35-39",
+  "user.extra.age.7": "40-44",
+  "user.extra.age.8": "45-49",
+  "user.extra.age.9": "50-54",
+  "user.extra.age.10": "55-59",
+  "user.extra.age.11": "60-64",
+  "user.extra.age.12": "65-69",
+  "user.extra.age.13": "70-74",
+  "user.extra.age.14": "75 ou plus",
+  "user.extra.age.short.1": "moins de 18",
+  "user.extra.age.short.2": "18-29",
+  "user.extra.age.short.3": "30-49",
+  "user.extra.age.short.4": "50-65",
+  "user.extra.age.short.5": "65 ou plus",
+  "user.extra.job.label": "Activité",
+  "user.extra.job.1": "Étudiant-e",
+  "user.extra.job.2": "Salarié-e du secteur privé",
+  "user.extra.job.3": "Fonctionnaire ou contractuel-le du secteur public",
+  "user.extra.job.4": "Profession libérale",
+  "user.extra.job.5": "Artisan ou entrepreneur",
+  "user.extra.job.6": "Retraité-e",
+  "user.extra.job.7": "Sans activité",
+  "user.extra.job.8": "Autres",
+  "user.extra.org.label": "Organisation",
+  "user.extra.postal.label": "Code postal",
+  "user.extra.postal.validator": "Code postal invalide"
 }
