--- a/lib/translations/lib/gl.json
+++ b/lib/translations/lib/gl.json
@@ -111,6 +111,9 @@
   "comments.send": "Enviar",
   "comments.sign-in-required": "Debes estar rexistrado para poder argumentar aquí",
   "comments.sign-in-required-to-vote-comments": "Debes estar rexistrado para poder cualificar argumentos",
+  "comments.sorts.newest-first": "Máis novos primeiro",
+  "comments.sorts.oldest-first": "Máis vellos primeiro",
+  "comments.sorts.score": "Relevancia",
   "comments.your-argument": "O teu argumento",
   "comments.your.arguments": "Os teus argumentos",
   "common.app-name": "DemocracyOS",
@@ -124,11 +127,6 @@
   "common.ok": "Aceptar",
   "common.or": "ou",
   "common.read-more": "Ler máis",
-  "common.sorts.closing-soon": "Próximos a pechar",
-  "common.sorts.newest-first": "Máis novos primeiro",
-  "common.sorts.oldest-first": "Máis vellos primeiro",
-  "common.sorts.recently-updated": "Con actividade recente",
-  "common.sorts.score": "Relevancia",
   "democracyos.markdown.flavored": "Formato de texto",
   "forgot.error.email-not-valid": "Debes validar o enderezo de correo electrónico antes de pode axustar o contrasinal da conta",
   "forgot.explanation": "Enviarémosche un correo electrónico cunha ligazón para reestablecer o teu contrasinal",
@@ -271,6 +269,10 @@
   "signup.with-email": "Rexistro con correo electrónico",
   "signup.your-firstname": "O teu nome",
   "signup.your-lastname": "O teu apelido",
+  "sorts.closing-soon": "Próximos a pechar",
+  "sorts.newest-first": "Máis novos primeiro",
+  "sorts.oldest-first": "Máis vellos primeiro",
+  "sorts.recently-updated": "Con actividade recente",
   "validators.checked": "Elixir unha opción",
   "validators.input.not-exists": "Non existe o elemento {name}",
   "validators.invalid": "Non válido",
