--- a/lib/translations/lib/hu.json
+++ b/lib/translations/lib/hu.json
@@ -111,6 +111,9 @@
   "comments.send": "Küldés",
   "comments.sign-in-required": "Lépj be az oldalra az érveléshez.",
   "comments.sign-in-required-to-vote-comments": "Lépj be az oldalra az érvek fel/leszavazásához.",
+  "comments.sorts.newest-first": "A legfrissebbek előre",
+  "comments.sorts.oldest-first": "A legrégibbek előre",
+  "comments.sorts.score": "Relevancia",
   "comments.your-argument": "Az érved",
   "comments.your.arguments": "Az érveid",
   "common.app-name": "DemocracyOS",
@@ -124,11 +127,6 @@
   "common.ok": "OK",
   "common.or": "vagy",
   "common.read-more": "Tovább olvasom",
-  "common.sorts.closing-soon": "Hamarosan lezárul",
-  "common.sorts.newest-first": "A legfrissebbek előre",
-  "common.sorts.oldest-first": "A legrégibbek előre",
-  "common.sorts.recently-updated": "Nemrégiben frissült",
-  "common.sorts.score": "Relevancia",
   "democracyos.markdown.flavored": "DemocracyOS féle markdown",
   "forgot.error.email-not-valid": "A jelszó megváltoztatásához először érvényesítsd az e-mail címed.",
   "forgot.explanation": "Egy e-mailt küldünk Neked, az abban található linken új jelszót adhatsz meg.",
@@ -273,6 +271,10 @@
   "signup.with-email": "Regisztrálj az e-maileddel",
   "signup.your-firstname": "Keresztnév",
   "signup.your-lastname": "Vezetéknév",
+  "sorts.closing-soon": "Hamarosan lezárul",
+  "sorts.newest-first": "A legfrissebbek előre",
+  "sorts.oldest-first": "A legrégibbek előre",
+  "sorts.recently-updated": "Nemrégiben frissült",
   "validators.checked": "Kötelező megjelölni",
   "validators.input.not-exists": "{name} elem nem létezik",
   "validators.invalid": "Érvénytelen",
