--- a/lib/translations/lib/it.json
+++ b/lib/translations/lib/it.json
@@ -111,6 +111,9 @@
   "comments.send": "Inviare",
   "comments.sign-in-required": "Devi essere registrato per discutere qui",
   "comments.sign-in-required-to-vote-comments": "È necessario per votare i commenti",
+  "comments.sorts.newest-first": "Più recenti",
+  "comments.sorts.oldest-first": "Più vecchi",
+  "comments.sorts.score": "Rilevanza",
   "comments.your-argument": "Il tuo commento",
   "comments.your.arguments": "I tuoi commenti",
   "common.app-name": "DemocracyOS",
@@ -124,11 +127,6 @@
   "common.ok": "OK",
   "common.or": "o",
   "common.read-more": "leggi di più",
-  "common.sorts.closing-soon": "In chiusura",
-  "common.sorts.newest-first": "Prima i più recenti",
-  "common.sorts.oldest-first": "Prima i più vecchi",
-  "common.sorts.recently-updated": "Recentemente aggiornato",
-  "common.sorts.score": "Rilevanza",
   "democracyos.markdown.flavored": "Help utilizzato in DemocracyOS",
   "forgot.error.email-not-valid": "È necessario convalidare il tuo indirizzo e-mail prima di poter reimpostare la password",
   "forgot.explanation": "Invieremo una email con un link per reimpostare la password",
@@ -271,6 +269,10 @@
   "signup.with-email": "Registrazione con indirizzo e-mail",
   "signup.your-firstname": "Tuo primo nome",
   "signup.your-lastname": "Tuo cognome",
+  "sorts.closing-soon": "In chiusura",
+  "sorts.newest-first": "Prima i più recenti",
+  "sorts.oldest-first": "Prima i più vecchi",
+  "sorts.recently-updated": "Recentemente aggiornato",
   "validators.checked": "Campo controllato obbligatorio",
   "validators.input.not-exists": "{name} non esiste ",
   "validators.invalid": "Non valido",
