--- a/lib/translations/lib/pl.json
+++ b/lib/translations/lib/pl.json
@@ -62,6 +62,9 @@
   "comments.send": "Wyślij",
   "comments.sign-in-required": "Musisz się zalogować żeby brać udział w dyskusji",
   "comments.sign-in-required-to-vote-comments": "Musisz być zalogowany żeby aprobować/dezaprobować opinie",
+  "comments.sorts.newest-first": "Najpierw najnowsze",
+  "comments.sorts.oldest-first": "najpierw najstarsze",
+  "comments.sorts.score": "Aktualność",
   "comments.your-argument": "Twoja opinia",
   "comments.your.arguments": "Twoje opinie",
   "common.app-name": "DemocracyOS",
@@ -75,11 +78,6 @@
   "common.ok": "OK",
   "common.or": "lub",
   "common.read-more": "Czytaj więcej",
-  "common.sorts.closing-soon": "Wkrótce zamykane",
-  "common.sorts.newest-first": "Najpierw najnowsze",
-  "common.sorts.oldest-first": "Najpierw najstarsze",
-  "common.sorts.recently-updated": "Ostatnio zmienione",
-  "common.sorts.score": "Aktualność",
   "democracyos.markdown.flavored": "Markdown rozszerzony dla DemocracyOS",
   "forgot.error.email-not-valid": "Przed zresetowaniem hasła musisz potwierdzić swój adres e-mail",
   "forgot.explanation": "Na twój adres e-mail zostanie wysłana wiadomość z linkiem do zresetowania hasła",
@@ -223,6 +221,10 @@
   "signup.with-email": "Zarejestruj się używając adresu e-mail",
   "signup.your-firstname": "Twoje imię",
   "signup.your-lastname": "Twoje nazwisko",
+  "sorts.closing-soon": "Wkrótce zamykane",
+  "sorts.newest-first": "Najpierw najnowsze",
+  "sorts.oldest-first": "Najpierw najstarsze",
+  "sorts.recently-updated": "Ostatnio zmienione",
   "validators.checked": "Zaznaczone pola są wymagane",
   "validators.input.not-exists": "Element {name} nie istnieje",
   "validators.invalid": "Błędne",
