--- a/lib/translations/lib/pt.json
+++ b/lib/translations/lib/pt.json
@@ -111,6 +111,9 @@
   "comments.send": "Enviar",
   "comments.sign-in-required": "Você deve estar registrado para argumentar aqui",
   "comments.sign-in-required-to-vote-comments": "Você deve estar registrado para qualificar argumentos",
+  "comments.sorts.newest-first": "Mais novos primeiro",
+  "comments.sorts.oldest-first": "Mais velhos primeiro",
+  "comments.sorts.score": "Relevância",
   "comments.your-argument": "Seu argumento",
   "comments.your.arguments": "Seus argumentos",
   "common.app-name": "DemocracyOS",
@@ -124,11 +127,6 @@
   "common.ok": "Aceitar",
   "common.or": "ou",
   "common.read-more": "Leia mais",
-  "common.sorts.closing-soon": "Próximos a fechar",
-  "common.sorts.newest-first": "Mais novos primeiro",
-  "common.sorts.oldest-first": "Mais velhos primeiro",
-  "common.sorts.recently-updated": "Atualizados recentemente",
-  "common.sorts.score": "Relevância",
   "democracyos.markdown.flavored": "Formato de texto",
   "forgot.error.email-not-valid": "Você deve validar o seu endereço de e-mail antes que você possa redefinir sua senha",
   "forgot.explanation": "Enviaremos um e-mail com um link para configurar uma nova senha",
@@ -272,6 +270,10 @@
   "signup.with-email": "Cadastro com endereço de e-mail",
   "signup.your-firstname": "Seu nome",
   "signup.your-lastname": "Seu sobrenome",
+  "sorts.closing-soon": "Próximos a fechar",
+  "sorts.newest-first": "Mais novos primeiro",
+  "sorts.oldest-first": "Mais velhos primeiro",
+  "sorts.recently-updated": "Atualizados recentemente",
   "validators.checked": "Campo verificado requerido",
   "validators.input.not-exists": "Elemento de {name} não existe",
   "validators.invalid": "Inválido",
