--- a/lib/translations/lib/ro.json
+++ b/lib/translations/lib/ro.json
@@ -112,6 +112,9 @@
   "comments.send": "Trimite",
   "comments.sign-in-required": "Trebuie să fii înregistrat pentru a argumenta",
   "comments.sign-in-required-to-vote-comments": "Trebuie să fii înregistrat pentru a vota argumente pro sau contra.",
+  "comments.sorts.newest-first": "Ce e mai nou mai întâi",
+  "comments.sorts.oldest-first": "Ce e mai vechi mai întâi",
+  "comments.sorts.score": "Relevanță",
   "comments.your-argument": "Argumentul tău",
   "comments.your.arguments": "Argumentele voastre",
   "common.app-name": "DemocracyOS",
@@ -125,11 +128,6 @@
   "common.ok": "OK",
   "common.or": "sau",
   "common.read-more": "Citește mai mult",
-  "common.sorts.closing-soon": "Se închide în curând",
-  "common.sorts.newest-first": "Ce e mai nou mai întai",
-  "common.sorts.oldest-first": "Ce e mai vechi mai întâi",
-  "common.sorts.recently-updated": "Modificate recent",
-  "common.sorts.score": "Relevanță",
   "democracyos.markdown.flavored": "DemocracyOS flavored markdown",
   "forgot.error.email-not-valid": "Trebuie să validezi adresa de email pentru a putea reseta parola contului.",
   "forgot.explanation": "Îți vom trimite un email cu un link pentru resetarea parolei",
@@ -301,6 +299,10 @@
   "signup.with-email": "Înregistreaza-te cu emailul",
   "signup.your-firstname": "Prenume",
   "signup.your-lastname": "Nume",
+  "sorts.closing-soon": "Se închide în curând",
+  "sorts.newest-first": "Ce e mai nou mai întai",
+  "sorts.oldest-first": "Ce e mai vechi mai întâi",
+  "sorts.recently-updated": "Modificate recent",
   "validators.checked": "Acest câmp trebuie să fie bifat",
   "validators.input.not-exists": "elementul {name} nu există",
   "validators.invalid": "Invalid",
