--- a/lib/translations/lib/sq.json
+++ b/lib/translations/lib/sq.json
@@ -166,6 +166,9 @@
     "comments.send": "Dërgo",
     "comments.sign-in-required": "Ju duhet të jeni të lidhur në sistem në mënyrë që të argumentoni këtu",
     "comments.sign-in-required-to-vote-comments": "Ju duhet të jeni të lidhur në sistem në mënyrë që të keni mundësi për të votuar pozitivisht apo negativisht argumentet",
+    "comments.sorts.newest-first": "Më të Rejat fillimisht",
+    "comments.sorts.oldest-first": "Më të Vjetrat fillimisht",
+    "comments.sorts.score": "Rëndësia",
     "comments.your-argument": "Argumenti yt",
     "comments.your.arguments": "Argumentat e tu",
     "common.app-name": "DemocracyOS",
@@ -179,11 +182,6 @@
     "common.ok": "Në rregull",
     "common.or": "ose",
     "common.read-more": "Lexo më shumë",
-    "common.sorts.closing-soon": "Mbyllja shpejti",
-    "common.sorts.newest-first": "Të rejat më parë",
-    "common.sorts.oldest-first": "Të vjetrat më parë",
-    "common.sorts.recently-updated": "Përditësuar kohët e fundit",
-    "common.sorts.score": "Rëndësia",
     "democracyos.markdown.flavored": "Markdown DemocracyOS salcë",
     "forgot.error.email-not-valid": "Duhet të verifikoni adresën e email-it përpara se të rivendosni fjalëkalimin e llogarisë suaj",
     "forgot.explanation": "Do ju dergojmë një email bashkë me një ndërlidhje për të rivendosur fjalëkalimin",
@@ -347,6 +345,10 @@
     "signup.with-email": "Regjistrohu me email",
     "signup.your-firstname": "Firstname tuaj",
     "signup.your-lastname": "Mbiemri Juaj",
+    "sorts.closing-soon": "Mbyllja shpejti",
+    "sorts.newest-first": "Të rejat më parë",
+    "sorts.oldest-first": "Të vjetrat më parë",
+    "sorts.recently-updated": "Përditësuar kohët e fundit",
     "validators.checked": "Fusha e kërkuar kontrolluar",
     "validators.invalid": "Invalid",
     "validators.invalid.author": "Autori i pavlefshëm",
