--- a/lib/translations/lib/uk.json
+++ b/lib/translations/lib/uk.json
@@ -111,6 +111,9 @@
   "comments.send": "Відправити",
   "comments.sign-in-required": "Ви повинні зареєструватись щоб дискутувати тут",
   "comments.sign-in-required-to-vote-comments": "Ви повинні увійти щоб підтримати або відхилити",
+  "comments.sorts.newest-first": "Найновіші спочатку",
+  "comments.sorts.oldest-first": "Найстаріші спочатку",
+  "comments.sorts.score": "Актуальність",
   "comments.your-argument": "Ваш аргумент",
   "comments.your.arguments": "Ваші аргументи",
   "common.app-name": "DemocracyOS",
@@ -124,11 +127,6 @@
   "common.ok": "ОК",
   "common.or": "або",
   "common.read-more": "Читати далі",
-  "common.sorts.closing-soon": "Закриваються скоро",
-  "common.sorts.newest-first": "Найновіші спочатку",
-  "common.sorts.oldest-first": "Найстаріші спочатку",
-  "common.sorts.recently-updated": "Нещодавно оновлені",
-  "common.sorts.score": "Актуальність",
   "democracyos.markdown.flavored": "Система виділення в DemocracyOS",
   "forgot.error.email-not-valid": "Ви повинні підтвердити адресу Вашої електронної пошти, перш ніж Ви можете відновити Ваш пароль",
   "forgot.explanation": "Ми надішлемо Вам лист з посиланням для відновлення пароля",
@@ -271,6 +269,10 @@
   "signup.with-email": "Реєстрація з електронною поштою",
   "signup.your-firstname": "Ваше Ім'я",
   "signup.your-lastname": "Ваше Прізвище",
+  "sorts.closing-soon": "Закриваються скоро",
+  "sorts.newest-first": "Найновіші спочатку",
+  "sorts.oldest-first": "Найстаріші спочатку",
+  "sorts.recently-updated": "Нещодавно оновлені",
   "validators.checked": "Обов'язково виділені поля",
   "validators.input.not-exists": "{name} елемент не існує",
   "validators.invalid": "Невірний",
