--- a/lib/translations/lib/zh_TW.json
+++ b/lib/translations/lib/zh_TW.json
@@ -62,6 +62,9 @@
   "comments.send": "發送",
   "comments.sign-in-required": "你必須登入後才可在這裡發表意見",
   "comments.sign-in-required-to-vote-comments": "你必須登入去點選論點是否有助辯論",
+  "comments.sorts.newest-first": "顯示最新",
+  "comments.sorts.oldest-first": "顯示最舊",
+  "comments.sorts.score": "相關",
   "comments.your-argument": "你的論點",
   "comments.your.arguments": "你的論點",
   "common.app-name": "DemocracyOS",
@@ -75,11 +78,6 @@
   "common.ok": "接受",
   "common.or": "或",
   "common.read-more": "閱讀更多",
-  "common.sorts.closing-soon": "將會關閉",
-  "common.sorts.newest-first": "最新",
-  "common.sorts.oldest-first": "最舊",
-  "common.sorts.recently-updated": "最近更新",
-  "common.sorts.score": "相關",
   "democracyos.markdown.flavored": "DemocracyOS flavored markdown",
   "forgot.error.email-not-valid": "你必須先核實你的電郵地址，方可重設帳戶密碼",
   "forgot.explanation": "我們會發送更改密碼的指示到你的電郵",
@@ -223,6 +221,10 @@
   "signup.with-email": "用電郵登入",
   "signup.your-firstname": "你的名字",
   "signup.your-lastname": "你的姓氏",
+  "sorts.closing-soon": "將會關閉",
+  "sorts.newest-first": "最新",
+  "sorts.oldest-first": "最舊",
+  "sorts.recently-updated": "最近更新",
   "validators.checked": "請選擇",
   "validators.input.not-exists": "{name}並不存在",
   "validators.invalid": "無效",
